traces/bug_325.txt
src/medit/particle.c:343: error: DEAD_STORE
  The value written to &base (type int) is never used.
Showing all 1 steps of the trace


src/medit/particle.c:343:3: Write of unused value
341.     }
342.   
343.     ++base;
         ^
344.     l = 1;
345.     for (k=1; k<=st->nbstl; k++) {
